k8s/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-blue
spec:
  selector:
    app: myapp
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
