k8s/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-green
spec:
  selector:
    app: myapp
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
